[gd_scene load_steps=4 format=3 uid="uid://wb48p37unrif"]

[ext_resource type="Script" path="res://GUI/options.gd" id="1_gqymt"]
[ext_resource type="Theme" uid="uid://b256ciymyaap6" path="res://GUI/titleScreenTheme.tres" id="2_7wkyv"]
[ext_resource type="PackedScene" uid="uid://c1wuym7dhw62h" path="res://GUI/backgroundLayer/background.tscn" id="3_a1uxx"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqymt")

[node name="background" parent="." instance=ExtResource("3_a1uxx")]
layout_mode = 0

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 150.0
offset_right = 828.0
offset_bottom = 406.0
theme = ExtResource("2_7wkyv")
alignment = 1

[node name="speedrunTimer" type="CheckButton" parent="vbox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Speedrun Timer"

[node name="control2" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="magicShield" type="CheckButton" parent="vbox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Magic Shield"

[node name="control3" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="rank" type="CheckButton" parent="vbox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Give Rank At Level End"

[node name="control" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="backButton" type="Button" parent="vbox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Back"

[connection signal="toggled" from="vbox/speedrunTimer" to="." method="_on_toggled_speedrun_timer"]
[connection signal="toggled" from="vbox/magicShield" to="." method="_on_toggled_magic_shield"]
[connection signal="toggled" from="vbox/rank" to="." method="_on_toggled_rank"]
[connection signal="button_up" from="vbox/backButton" to="." method="_on_button_up_back_button"]
